--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 """
-Created on Sat Jun 13 22:44:29 2020
+Created on Sat Jun 13 23:59:00 2020
 
 @author: Nate
 """
@@ -13,5 +13,5 @@ Created on Sat Jun 13 22:44:29 2020
     {% for field in form %}
         {{ render_field(field) }}
     {% endfor %}
-    <button type="submit" id="submit">Register!</button>
+    <button type="submit" id="submit">Login!</button>
 </form>
