Add generic layout template

--- a/templates/register.html
+++ b/templates/register.html
@@ -6,8 +6,10 @@ Created on Sat Jun 13 22:44:29 2020
 """
 
 
+{% extends "layout.html" %}
 {% from 'macros.html' import render_field %}
 
+{% block content %}
 <form method="POST" action="" class="form">
     {{ form.hidden_tag() }}
     {% for field in form %}
@@ -15,3 +17,4 @@ Created on Sat Jun 13 22:44:29 2020
     {% endfor %}
     <button type="submit" id="submit">Register!</button>
 </form>
+{% endblock %}
