--- a/templates/stream.html
+++ b/templates/stream.html
@@ -14,7 +14,7 @@ Created on Mon Jun 15 18:44:26 2020
         <h2>
             <a href="{{ url_for('stream', username=post.user.username) }}">{{ post.user.username }}</a>
         </h2>
-        <i class="clock"></i><time data-time="{{ post.timestamp.timestamp() }}" class="distime" datetime="{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}">{{ post.timestamp }}</time><a href="#" class="view">View</a>
+        <i class="clock"></i><time data-time="{{ post.timestamp.timestamp() }}" class="distime" datetime="{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}">{{ post.timestamp }}</time><a href="{{ url_for('view_post', post_id=post.id) }}" class="view">View</a>
         <div class="post">
             {{ post.content }}
         </div>
